--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,4 @@
-normal:
-  content:  "I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='http://www.ntu.edu.sg/home/asjfcai/'>Prof. Jianfei Cai</a>."
+- normal:
+    content:  "Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by ECCV 2018."
+- normal:
+    content:  "I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='http://www.ntu.edu.sg/home/asjfcai/'>Prof. Jianfei Cai</a>."
