--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,7 +17,7 @@
   desc: 'We propose a novel end-to-end deep learning framework for joint AU detection and face alignment, which has not been explored before. In particular, multi-scale shared features are learned firstly, and high-level features of face alignment are fed into AU detection. Moreover, to extract precise local features, we propose an adaptive attention learning module to refine the attention map of each AU adaptively. Finally, the assembled local features are integrated with face alignment features and global features for AU detection. Experiments on BP4D and DISFA benchmarks demonstrate that our framework significantly outperforms the state-of-the-art methods for AU detection.'
   tags:
     - name: 'arXiv'
-      url:  'https://arxiv.org/pdf/1803.05588'
+      url:  'https://arxiv.org/abs/1803.05588'
     #- name: 'pdf'
     #  url:  'https://zhiwenshao.github.io/pdfs/projects/2017/shao2017learning.pdf'
     #- name: 'site'
