--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -18,8 +18,8 @@
   tags:
     - name: 'arXiv'
       url:  'https://arxiv.org/abs/1803.05588'
-    #- name: 'pdf'
-    #  url:  'https://zhiwenshao.github.io/pdfs/projects/2017/shao2017learning.pdf'
+    - name: 'pdf'
+      url:  'http://openaccess.thecvf.com/content_ECCV_2018/papers/Zhiwen_Shao_Deep_Adaptive_Attention_ECCV_2018_paper.pdf'
     #- name: 'site'
     #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
     
