--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,30 @@
+- title: 'Deep Multi-Center Learning for Face Alignment'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2018/shao2018deep_multi.png'
+  selected: true
+  authors:
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Hengliang Zhu
+      url:  false
+    - name: Xin Tan
+      url:  false
+    - name: Yangyang Hao
+      url:  false
+    - name: Lizhuang Ma
+      url:  'http://www.cs.sjtu.edu.cn/en/PeopleDetail.aspx?id=154'  
+  publisher:  'Neurocomputing, 2018'
+  status:   '(JCR Q2, SCI)'
+  #place:   'in San Diego, USA'
+  desc: 'Facial landmarks are highly correlated with each other since a certain landmark can be estimated by its neighboring landmarks. Most of the existing deep learning methods only use one fully-connected layer called shape prediction layer to estimate the locations of facial landmarks. In this paper, we propose a novel deep learning framework named Multi-Center Learning with multiple shape prediction layers for face alignment. In particular, each shape prediction layer emphasizes on the detection of a certain cluster of semantically relevant landmarks respectively. Challenging landmarks are focused firstly, and each cluster of landmarks is further optimized respectively. Moreover, to reduce the model complexity, we propose a model assembling method to integrate multiple shape prediction layers into one shape prediction layer.'
+  tags:
+    - name: 'arXiv'
+      url:  'https://arxiv.org/abs/1808.01558'
+    #- name: 'pdf'
+    #  url:  'https://zhiwenshao.github.io/pdfs/projects/2017/zhu2017better.pdf'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+    
 - title: 'Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment'
   date:  'Sept. 2018'
   imgurl: '/images/projects/2018/shao2018deep.png'
