--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -3,14 +3,14 @@
   desc:  "Facial Action Unit Recognition, Face Alignment"
   host:
     name:  "<a href='http://www.ntu.edu.sg/home/asjfcai/'>Prof. Jianfei Cai</a>"
-    role: "Supervisor"
+    role: "Advisor"
   brief: true
 - date:  "Sept. 2015 - "
   title: "Ph.D. candidate @ SJTU"
   desc:  "Face Analysis, Deep Learning"
   host:
     name: "<a href='http://www.cs.sjtu.edu.cn/en/PeopleDetail.aspx?id=154'>Prof. Lizhuang Ma</a>"
-    role: "Supervisor"
+    role: "Advisor"
   brief: true
 - date:  "Mar. 2015 - Sept. 2016"
   title: "Intern @ Tencent Youtu Lab"
