--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -13,7 +13,7 @@
     role: "Advisor"
   brief: true
 - date:  "Mar. 2015 - Sept. 2016"
-  title: "Intern @ Tencent Youtu Lab"
+  title: "Intern @ Tencent YouTu Lab"
   desc:  "Face Analysis, Deep Learning"
   host:  false
   brief: true
