--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by IEEE Transactions on Affective Computing."
+- normal:
     content:  "<strong>Jul. 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by ECCV 2018."
 - normal:
     content:  "<strong>Nov. 2017:</strong> I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='http://www.ntu.edu.sg/home/asjfcai/'>Prof. Jianfei Cai</a>."
