--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -16,7 +16,7 @@
   publisher:  'IEEE Transactions on Affective Computing, 2019'
   status:   '(CCF B, SCI Q2)'
   #place:   'in San Diego, USA'
-  desc: 'Attention mechanism has recently attracted increasing attentions in the field of facial action unit (AU) detection. By finding the region of interest of each AU with the attention mechanism, AU-related local features can be captured. Most of the existing attention based AU detection works use prior knowledge to predefine fixed attentions or refine the predefined attentions within a small range, which limits their capacity to model various AUs. In this paper, we propose an end-to-end deep learning based attention and relation learning framework for AU detection with only AU labels, which has not been explored before. In particular, multi-scale features shared by each AU are learned firstly, and then both channel-wise and spatial attentions are adaptively learned to select and extract AU-related local features. Moreover, pixel-level relations for AUs are further captured to refine spatial attentions so as to extract more relevant local features. Without changing the network architecture, our framework can be easily extended for AU intensity estimation.'
+  desc: 'We propose an end-to-end deep learning based attention and relation learning framework for AU detection with only AU labels, which has not been explored before. In particular, multi-scale features shared by each AU are learned firstly, and then both channel-wise and spatial attentions are adaptively learned to select and extract AU-related local features. Moreover, pixel-level relations for AUs are further captured to refine spatial attentions so as to extract more relevant local features. Without changing the network architecture, our framework can be easily extended for AU intensity estimation.'
   tags:
     - name: 'arXiv'
       url:  'https://arxiv.org/abs/1808.03457'
@@ -45,7 +45,7 @@
   publisher:  'Neurocomputing, 2019'
   status:   '(CCF C, SCI Q2)'
   #place:   'in San Diego, USA'
-  desc: 'Facial landmarks are highly correlated with each other since a certain landmark can be estimated by its neighboring landmarks. Most of the existing deep learning methods only use one fully-connected layer called shape prediction layer to estimate the locations of facial landmarks. In this paper, we propose a novel deep learning framework named Multi-Center Learning with multiple shape prediction layers for face alignment. In particular, each shape prediction layer emphasizes on the detection of a certain cluster of semantically relevant landmarks respectively. Challenging landmarks are focused firstly, and each cluster of landmarks is further optimized respectively. Moreover, to reduce the model complexity, we propose a model assembling method to integrate multiple shape prediction layers into one shape prediction layer.'
+  desc: 'We propose a novel deep learning framework named Multi-Center Learning with multiple shape prediction layers for face alignment. In particular, each shape prediction layer emphasizes on the detection of a certain cluster of semantically relevant landmarks respectively. Challenging landmarks are focused firstly, and each cluster of landmarks is further optimized respectively. Moreover, to reduce the model complexity, we propose a model assembling method to integrate multiple shape prediction layers into one shape prediction layer.'
   tags:
     - name: 'arXiv'
       url:  'https://arxiv.org/abs/1808.01558'
@@ -168,6 +168,33 @@
     #- name: 'site'
     #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
 
+- title: 'Deep Multi-Center Learning for Face Alignment'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2018/hao2019feedback.png'
+  selected: true
+  authors:
+    - name: Yangyang Hao
+      url:  false
+    - name: Hengliang Zhu
+      url:  false
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Lizhuang Ma
+      url:  'http://www.cs.sjtu.edu.cn/en/PeopleDetail.aspx?id=154'  
+  publisher:  'IET Computer Vision, 2019'
+  status:   '(CCF C, SCI Q4)'
+  #place:   'in San Diego, USA'
+  desc: 'We propose a new pipeline of salient-to-inner-to-all to progressively compute the locations of landmarks. Additionally, a feedback process is utilised to improve the robustness of regression. They bring out a pose-invariant shape retrieval method to generate the discriminative initialisation.'
+  tags:
+    #- name: 'arXiv'
+    #  url:  'https://arxiv.org/abs/1808.01558'
+    #- name: 'code'
+    #  url:  'https://github.com/ZhiwenShao/MCNet-Extension'  
+    - name: 'pdf'
+      url:  'https://zhiwenshao.github.io/pdfs/projects/2019/hao2019feedback.pdf'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+    
 - title: 'Multi-path Feature Fusion Network for Saliency Detection'
   date:  'Jul. 2018'
   imgurl: '/images/projects/2018/zhu2018multi.png'
