--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -253,7 +253,7 @@
     
 - title: 'Facial Landmark Detection Under Large Pose'
   date:  'Dec. 2018'
-  #imgurl: '/images/projects/2018/zhu2018multi.png'
+  imgurl: '/images/projects/2018/hao2018facial.png'
   selected: true
   authors:
     - name: Yangyang Hao
